<resources>
    <string name="app_name">Odoo Warehousing</string>
    <string name="title_activity_login">Sign in</string>

    <string name="title_activity_main">MainActivity</string>
    <string-array name="protocols">
        <item>http</item>
        <item>https</item>
    </string-array>
    <string name="hint_url">Url</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_port">Port</string>
    <string name="button_deliver">Deliver</string>
    <string name="button_pickup">Pickup</string>
    <string name="port_80">80</string>
    <string name="error_login_failed_invalid_credentials">Login failed, invalid credentials.</string>
    <string name="error_login_failed_generic_error">Login failed, generic error.</string>
    <string name="error_malformed_url">Wrong URL</string>
    <string name="internal">Internal</string>
    <string name="packs">Packs</string>
    <string name="inventory_adjust">Inventory Adjust</string>
    <string name="stock_move">Stock Move</string>
    <string name="inventory_move">Inventory Move</string>
    <string name="scan">Scan</string>
    <string name="select">Select</string>
    <string name="quantity">Quantity</string>
    <string name="product">Product</string>
    <string name="location_from">Location FROM</string>
    <string name="location_to">Location TO</string>
    <string name="location">Location</string>
    <string name="add_to_inventory">Add to inventory</string>
    <string name="error_barcode_scan">Scan error, try again.</string>
    <string name="scan_barcode">Scan a barcode</string>
    <string name="licence">Licence</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="licences">==== TODO==== copy all licences here</string>
    <string name="button_adjust_zero_all">Set all quantities to zero.</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="search">Search</string>
    <string name="search_barcode">Search using Barcode</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
