<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_main_activity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <Button
        android:id="@+id/button_deliver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_deliver"
        style="?android:attr/buttonBarButtonStyle"/>

    <Button
        android:id="@+id/button_pickup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_pickup"
        style="?android:attr/buttonBarButtonStyle"/>

    <Button
        android:id="@+id/button_internal_move"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/internal"
        style="?android:attr/buttonBarButtonStyle"
        />

    <Button
        android:id="@+id/button_packs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/packs"
        style="?android:attr/buttonBarButtonStyle"
        />

    <!--Insert a whole empty line-->

    <Button
        android:id="@+id/button_inventory_adjust"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/internal"
        style="?android:attr/buttonBarButtonStyle"
        />





</GridLayout>