<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/dialog_login_server_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/dialog_login_protocol"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <EditText
            android:id="@+id/dialog_login_url"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/hint_url"
            android:inputType="textUri" />

        <EditText
            android:id="@+id/dialog_login_port"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_port"
            android:inputType="number"
            android:text="@string/port_80" />
    </LinearLayout>

    <EditText
        android:id="@+id/dialog_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username"
        android:inputType="text" />

    <EditText
        android:id="@+id/dialog_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <Spinner
        android:id="@+id/dialog_login_database"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/dialog_login_button_container"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_login_button_login_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/dialog_login_button_login_ok"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@android:string/ok" />
    </LinearLayout>
</LinearLayout>
