<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="nl.triandria.odoowarehousing.InventoryMove">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_activity_inventory_move"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <TextView
        android:id="@+id/textview_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product" />

    <LinearLayout
        android:id="@+id/layout_product_scan_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/button_scan_product_inventory_move"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/scan" />

        <Button
            android:id="@+id/button_select_product_inventory_move"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select" />
    </LinearLayout>

    <TextView
        android:id="@+id/textview_stock_move_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textview_from_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location" />

    <LinearLayout
        android:id="@+id/layout_location_from_scan_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/button_scan_from_location_inventory_move"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/scan" />


        <Button
            android:id="@+id/button_select_from_location_inventory_move"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select" />
    </LinearLayout>

    <TextView
        android:id="@+id/textview_inventory_move_location_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/quantity"
        android:text="@string/quantity" />

    <EditText
        android:id="@+id/quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/button_inventory_move_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_inventory" />
</LinearLayout>